optimize time to send mail